--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = vectorspace
-version = 1.0.15
+version = 1.1.0
 description = A more opinionated way to do machine learning 🧅
 url = https://github.com/exdatic/vectorspace
 author = André Kischkel
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering
 
 [options]
@@ -29,11 +30,11 @@ package_dir=
     =.
 packages=find:
 include_package_data = true
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
     anyascii
     cloudpickle
-    elasticsearch>=7,<8
+    elasticsearch>=7
     lmdb
     loguru
     numba
